# simple-expected

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.pl  build.sh  conanfile.py  conanfile.txt  conanfile_tools.txt  remote.txt  requirements.txt
app/: CMakeLists.txt  conanfile.txt
app/src/: SimpleExpected.h
app/tests/: CMakeLists.txt
app/tests/src/: SimpleExpectedTests.cpp
include/: SimpleExpected.h
include/mr/: expected.hpp
profiles/: linux_clang_18_Make.Debug  linux_gcc_11_Make.Debug  linux_gcc_11_Make.Release  linux_gcc_11_Ninja.Debug  linux_gcc_11_Ninja.Release  linux_gcc_13_Make.Debug  win_mingw_12_Make.Debug  win_mingw_12_Make.Release  win_mingw_12_Ninja.Release  win_msvc_17_MD_VS.Debug  win_msvc_17_MD_VS.Release  win_msvc_17_MT_Ninja.Debug  win_msvc_17_MT_Ninja.Release  win_msvc_17_MT_VS.Debug  win_msvc_17_MT_VS.Release  win_msvc_19_MT_VS.Debug  win_msvc_19_MT_VS.Release  win_msvc_22_MD_VS.Debug  win_msvc_22_MD_VS.Release  win_msvc_22_MT_Ninja.Debug  win_msvc_22_MT_Ninja.Release  win_msvc_22_MT_VS.Debug  win_msvc_22_MT_VS.Release
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt
tests/src/: MoreExpectedTests.cpp  SimpleExpectedTests.cpp  test1.cpp
